# robocops

./: .gitignore  README.md  back_ultrasound_sensor.cpp  back_ultrasound_sensor.h  client.py  commands.h  dri_driver.cpp  dri_driver.h  ir_sensor.cpp  ir_sensor.h  l298n_driver.cpp  l298n_driver.h  lift_driver.cpp  lift_ultrasound_sensor.cpp  lift_ultrasound_sensor.h  maxon_driver.cpp  maxon_driver.h  maxon_encoder.cpp  maxon_encoder.h  move_to_position.py  pid.cpp  pid.h  robocops_arduino.ino  ros_arduino_bridge.ino  routines.cpp  routines.h  servo_driver.cpp  servo_driver.h  test_model_live.py  train_yolov11_notebook.ipynb  utils.cpp  utils.h
python_serial_tester/: serial_tester.py
robocops_arduino/: README.md  back_ultrasound_sensor.h  dri_driver.cpp  dri_driver.h  ir_sensor.h  lift_driver.h  maxon_encoder.cpp  maxon_encoder.h  robocops_arduino.ino  routines.cpp  servo_driver.cpp  servo_driver.h
robocops_arduino/tester/: arduino_tester.py  arduino_tester_old.py
robocops_computervision/: README.md  requirements.txt  test_model_live.py  train_yolov11_notebook.ipynb
robocops_ros2/: README.md
robocops_ros2/src/robocops_camera/: package.xml
robocops_ros2/src/robocops_control/: robocops_control.xml
robocops_ros2/src/robocops_msgs/: CMakeLists.txt  package.xml
robocops_ros2/src/robocops_navigation/: package.xml  setup.cfg
robocops_ros2/src/robocops_teleop/: setup.cfg  setup.py
src/robocops_brain/: CMakeLists.txt  package.xml
src/robocops_brain/behavior_trees/: robocops_tree.xml  robocos_tree.xml  test_is_door_open_tree.xml  test_slopeup.xml
src/robocops_brain/config/: map_locations.yaml
src/robocops_brain/include/: blocking_gpio_behavior.h  can_go_to_zone_behavior.h  is_door_open_behavior.h  navigation_behaviors.h  non_blocking_gpio_behavior.h  search_and_grab.h  search_and_grab_behavior.h
src/robocops_brain/launch/: run_bt.launch.py  start_robocops.launch.py  start_robot.launch.py
src/robocops_brain/src/: action_goto.cpp  action_wait.cpp  blocking_gpio_behavior.cpp  bt_runner.cpp  can_go_to_zone_behavior.cpp  condition_is_at.cpp  is_door_open_behavior.cpp  navigation_behaviors.cpp  non_blocking_gpio_behavior.cpp  run_bt.cpp  search_and_grab.cpp  search_and_grab_behavior.cpp
src/robocops_camera/: CMakeLists.txt  package.xml
src/robocops_camera/include/: duplo_mapper.hpp
src/robocops_camera/launch/: camera.launch.py  duplo_detector.py  duplo_image_size.py  duplo_test.py  duplo_viewer.py  duplos.launch.py  imu.launch.py  test.py
src/robocops_camera/src/: detections_display_publisher.cpp  duplo_detection_publisher.cpp  duplo_detection_viewer.cpp  duplo_image_size.cpp  duplo_mapper.cpp  duplo_processor.cpp  duplos.cpp  imu.cpp  imu.py  test.cpp
src/robocops_control/: CMakeLists.txt  package.xml  robocops_control.xml
src/robocops_control/bringup/config/: diffbot_controllers.yaml
src/robocops_control/bringup/launch/: diffbot.launch.py
src/robocops_control/config/: diffbot_controllers.yaml
src/robocops_control/description/ros2_control/: diffbot.ros2_control.xacro
src/robocops_control/description/rviz/: diffbot.rviz
src/robocops_control/description/urdf/: camera.xacro  depthai_descr.urdf.xacro  diffbot.urdf.xacro
src/robocops_control/hardware/: arduino_comms.cpp  diffbot_system.cpp  utils.cpp  wheel.cpp
src/robocops_control/hardware/include/: arduino_comms.hpp  diffbot_system.hpp  utils.hpp  wheel.hpp
src/robocops_control/launch/: launch_robot.launch.py  view_robot.launch.py
src/robocops_control_old/hardware/: arduino_comms.cpp  diffbot_system.cpp  wheel.cpp
src/robocops_description/: CMakeLists.txt  package.xml
src/robocops_description/description/control/: ros2_control.xacro
src/robocops_description/description/urdf/: camera.xacro  camera_holder.xacro  depthai_descr.urdf.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/robocops_description/launch/: robot_state_publisher.launch.py
src/robocops_duplos/: CMakeLists.txt  package.xml
src/robocops_duplos/include/: duplos_detection.hpp  duplos_mapper.hpp
src/robocops_duplos/launch/: duplo_detector.py  duplo_mapper.launch.py
src/robocops_duplos/src/: duplo_processor.cpp  duplo_publisher.cpp  duplo_viewer.cpp  duplos_detection.cpp  duplos_mapper.cpp  fake_tf_zone_publisher.cpp  main.cpp
src/robocops_gazebo/: CMakeLists.txt  package.xml
src/robocops_gazebo/config/: gz_bridge.yaml
src/robocops_gazebo/description/: gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robocops_2_wheels.urdf.xacro  robot_core.xacro
src/robocops_gazebo/launch/: arena.launch.py  robot_state_publisher.launch.py
src/robocops_gazebo/worlds/: arena.world
src/robocops_lidar/: CMakeLists.txt  package.xml
src/robocops_lidar/src/: rplidar_node.cpp
src/robocops_msgs/: CMakeLists.txt  package.xml
src/robocops_msgs/msg/: Duplo.msg  DuploArray.msg  GpioCommand.msg
src/robocops_msgs/srv/: RemoveDuplo.srv
src/robocops_navigation/: package.xml  setup.py
src/robocops_navigation/config/: ekf.yaml  imu_filter.yaml  lidar_filter_conf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_DWB.yaml  nav2_params_MPPI.yaml  nav2_params_MPPI_keepout.yaml  rviz2_nav2_params.rviz  rviz2_view_lidar.rviz  rviz2_visualise_params.rviz  twist_mux.yaml
src/robocops_navigation/launch/: bringup.launch.py  nav2_slam.launch.py  robocops.launch.py  robocops_rviz.launch.py  start_nav.launch.py  start_nav_w_keepout.launch.py  temp.launch.py  view_lidar.launch.py  visualise_nav.launch.py
src/robocops_navigation/map/: test_arena.pgm  test_arena.yaml
src/robocops_navigation/maps/: final_arena_blank.pgm  final_arena_blank.yaml  final_arena_keepout.pgm  final_arena_keepout.yaml  final_arena_keepout_OLD.pgm  mapv1.pgm  mapv1.yaml  test2_arena.data  test_arena.data  test_arena.pgm  test_arena.yaml
src/robocops_navigation/robocops_navigation/: filter_lidar_data.py  (+1 more)
src/robocops_teleop/: package.xml  setup.py
src/robocops_teleop/robocops_teleop/: robocops_teleop_keyboard.py
src/robot_urdf/: CMakeLists.txt  package.xml
tester/: s_testerv0.py  yo.py
tools_folder/: docker-compose.yml
(+25 files in other folders)
