<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocops_camera</name>
  <version>1.0.0</version>
  <description>Package used by the team RocoCops (Robot Competition EPFL 2025) for the camera.</description>

  <license>Apache-2.0</license>
  <maintainer email="florian.comte@epfl.ch">Florian Comte</maintainer>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>depthai</depend>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <!-- Testing dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

</package>
