<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocops_description</name>
  <version>1.0.0</version>
  <description>Package used by the team RocoCops (Robot Competition EPFL 2025) for the descriptions.</description>

  <license>Apache-2.0</license>
  <maintainer email="florian.comte@epfl.ch">Florian Comte</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>