<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocops_duplos</name>
  <version>1.0.0</version>
  <description>Package used by the team RocoCops (Robot Competition EPFL 2025) for the duplo detection system</description>
  <maintainer email="florian.comte@epfl.ch">Florian Comte</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>eigen3_cmake_module</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
