<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocops_teleop</name>
  <version>1.0.0</version>
  <description>Package used by the team RocoCops (Robot Competition EPFL 2025) to be able to control in gazebo and in real life the robot using teleoperator keyboard</description>
  <maintainer email="florian.comte@epfl.ch">Florian Comte</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>robocops_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
